fixed bookmark button spacing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,3 +34,56 @@
     font-size: 3rem;
   }
 }
+
+.fa-facebook-f {
+  width: 39px !important;
+  text-align: center !important;
+}
+.modal-container {
+  border-radius: 11px !important;
+}
+
+.greeting-message {
+  @include media-breakpoint-up(md) {
+    blockquote {
+      margin: -0.5rem 0;
+    }
+  }
+
+  span {
+    font-size: 15px;
+    color: #5c5c5c;
+  }
+
+  #bookmark-this {
+    white-space: nowrap;
+    padding: 5px 10px;
+	  margin: 4px 5px;
+	  background-color: #f0ad4e;
+	  border: 1px solid #eea236;
+	  border-radius: 4px;
+	  font-size: 15px;
+	  color: #fff;
+	  text-decoration: none;
+	  text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
+	  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+	  box-shadow: inset 0 0px 0 rgba(255, 255, 255, 0.4), 0 4px 2px rgb(195 140 83);
+	  -webkit-user-select:none;
+	  -moz-user-select:none;
+	  -ms-user-select:none;
+	  user-select:none;
+  }
+
+  #bookmark-this:hover {
+    background-color: #ec971f;
+    border: 1px solid #d58512;
+    text-decoration: none;
+  }
+
+  #bookmark-this:active {
+    background-color: #ec971f;
+    border: 1px solid #d58512;
+    -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
+  }
+}
